<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caso05Activity">
    <LinearLayout
        android:id="@+id/contenedorBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegresar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="#009688"
            android:textColor="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:layout_gravity="center"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/contenedorBotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitulo05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTitulo05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvMensaje05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMensaje05"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorPrograma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="32dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/contenedorInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Factores de 60"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular"
            android:textSize="18sp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="#009688"
            android:textColor="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:drawableRight="@drawable/ic_baseline_send"
            app:layout_constraintTop_toBottomOf="@id/tvNumero"
            app:layout_constraintStart_toStartOf="parent"/>

        <ListView
            android:id="@+id/lvFactores"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:background="#80FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/btnCalcular"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="El resultado aparece aquí"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/lvFactores"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>